--- a/AIO_LAYUI/src/main/webapp/login.html
+++ b/AIO_LAYUI/src/main/webapp/login.html
@@ -9,6 +9,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="format-detection" content="telephone=no">
+	<meta http-equiv="Access-Control-Allow-Origin" content="*">
 	<link rel="icon" href="favicon.ico">
 	<link rel="stylesheet" href="static/layui/css/layui.css" media="all" />
 	<link rel="stylesheet" href="static/css/public.css" media="all" />
